# envlint

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: release.yaml
docs/: USAGE.md
examples/: .env.boolean.example  .env.example  .env.float.example  .env.integer.example  .env.string.example
src/: cli.rs  macros.rs  main.rs  utils.rs
src/commands/: mod.rs
src/commands/lint/: lint.rs  mod.rs  validate.rs
src/common/: env.rs  file.rs  mod.rs  variable_collection.rs
src/file/: file.rs  mod.rs
src/parse/: builder.rs  matcher.rs  mod.rs  parse.rs
tests/: mod.rs
tests/common/: mod.rs  test_environment.rs  test_file.rs
tests/lint/: default_tag.rs  description_tag.rs  mod.rs  range_tag.rs  regex_tag.rs  required_tag.rs  tag.rs  title_tag.rs  type_tag.rs  variable.rs
