[package]
name = "envlint"
description = ".env file template & linter"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jeffjuann/envlint"

[[bin]]
name = "envlint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.0.0"
once_cell = "1.20.2"
regex = "1.11.1"

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.16.0"
